# monkchain

./: CMakeLists.txt  README.md
include/monkchain/: mc_blockchain.h  mc_env.h  mc_log.h  mc_macros.h  mc_os.h  mc_utils.h  monkchain.h
lib/sha256/: CMakeLists.txt  README.md  sha256.c  sha256.h
libmonkchain/: CMakeLists.txt  mc_blockchain.c  mc_env.c  mc_log.c  mc_os.c  mc_utils.c
tools/: CMakeLists.txt  mc.c
